# oryn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  selective-tests.yml
bench/: README.md  run.sh
crates/oryn/: Cargo.toml
crates/oryn-app/: Cargo.toml
crates/oryn-app/src/: assets.rs  backend.rs  broker.rs  colors.rs  launcher.rs  main.rs  mission.rs  palette.rs  profile.rs  review.rs  settings.rs  state.rs  theme.rs  timeline.rs
crates/oryn-cli/: Cargo.toml
crates/oryn-cli/src/: cov.rs  io.rs  main.rs  runner.rs  tui.rs
crates/oryn-core/: Cargo.toml
crates/oryn-core/examples/: advisor_smoke.rs
crates/oryn-core/src/: attest.rs  bayes.rs  bisect.rs  budget.rs  contam.rs  coverage.rs  dashboard.rs  determinism.rs  difflines.rs  error.rs  eval.rs  event.rs  fingerprint.rs  flaky.rs  fnselect.rs  fnspans.rs  git.rs  graph.rs  hybrid.rs  ids.rs  junit.rs  lib.rs  metadata.rs  prioritize.rs  refgraph.rs  report.rs  runner.rs  select.rs  session.rs  stats.rs  store.rs  text.rs  tune.rs  worktree.rs
crates/oryn-core/src/adapter/: claude.rs  mod.rs
crates/oryn-core/src/orchestrator/: advisor.rs  artificial_analysis.rs  capability.rs  catalog.rs  catalog_store.rs  cost.rs  decompose.rs  discovery.rs  engine.rs  harness.rs  listing.rs  mod.rs  prefix.rs  pricing.rs  provider.rs  runner.rs  scheduler.rs  task.rs  verify.rs
crates/oryn-core/tests/: orchestrator_pipeline.rs  real_backend.rs
crates/oryn-cuda/: Cargo.toml  build.rs
crates/oryn-cuda/kernels/: batch_invariant.cu
crates/oryn-cuda/src/: lib.rs
crates/oryn-server/: Cargo.toml
crates/oryn-server/src/: lib.rs  main.rs
crates/oryn/src/: render.rs  runner.rs  tui.rs
design/handoff/rust-ui-app-design/: README.md
design/handoff/rust-ui-app-design/project/: Oryn.dc.html
docs/design/: backend-execution-layer.md
docs/superpowers/plans/: 2026-06-18-oryn-orchestrator.md
examples/: baseline.jsonl  candidate.jsonl  corpus.jsonl  eval.jsonl  generations.json
examples/flow/: README.md  benchmark.jsonl  determinism_probe.json  model_a.jsonl  model_b.jsonl  training_corpus.jsonl
