[package]
name = "oryn-app"
description = "GPUI desktop frontend for Oryn — mission control for AI coding agents"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "oryn"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
hex = "0.4.3"
oryn-core = { path = "../oryn-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
ureq = "2.12"

[dev-dependencies]
tempfile = "3.27.0"
