[package]
name = "oryn-cli"
description = "Oryn command-line: contamination scanning, rigorous evals, determinism analysis, and signed attestations."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "oryn"
path = "src/main.rs"

[dependencies]
oryn-core.workspace = true
oryn-cuda.workspace = true
oryn-server.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
