[package]
name = "oryn-cli"
description = "Oryn command line — safe test-impact selection, statistical flaky scoring, and compile-time tuning for Cargo projects."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "oryn"
path = "src/main.rs"

[dependencies]
oryn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
