[package]
name = "oryn-core"
description = "Headless engine for Oryn — local-first mission control for AI coding agents"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
git2 = "0.21.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
