[package]
name = "oryn-core"
description = "Oryn — deterministic reproducibility & evaluation-integrity engine for AI (contamination scanning, statistically-rigorous evals, determinism analysis, signed attestations). No model in the loop."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ahash.workspace = true
rayon.workspace = true
hex.workspace = true

[dev-dependencies]
