[package]
name = "oryn-core"
description = "Oryn engine — safe Rust test-impact selection and statistically-rigorous flaky-test scoring. Compile less, test less, trust the results."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
blake3.workspace = true
quick-xml.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[dev-dependencies]
tempfile = "3"
