[package]
name = "oryn-server"
description = "Oryn HTTP API — a UI-agnostic JSON surface over the reproducibility & evaluation-integrity engine."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "oryn_server"
path = "src/lib.rs"

[[bin]]
name = "oryn-server"
path = "src/main.rs"

[dependencies]
oryn-core.workspace = true
oryn-cuda.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
