[package]
name = "oryn"
description = "Compile less, test less, trust the results — safe test-impact selection, statistical flaky scoring, and compile-time tuning for Cargo workspaces."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "oryn"
path = "src/main.rs"

[dependencies]
oryn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
ratatui.workspace = true
